[package]
name = "tf-docker"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for Terraform's Docker provider. Generated with tf-bindgen."
license = "BSD-3-Clause"
repository = "https://github.com/robert-oleynik/tf-docker"
keywords = ["tf-bindgen", "terraform", "infrastructure", "docker", "bindings"]
categories = ["config", "external-ffi-bindings"]

[build-dependencies]
tf-bindgen = "0.1.0"

[dependencies]
tf-bindgen = "0.1.0"
